# FastVideo

./: pyproject.toml
fastvideo/train/callbacks/: validation.py
